[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/ViewportSizeControls.gd" type="Script" id=2]

[node name="ViewportSizeControls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1370.0
margin_bottom = -880.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_right = 555.0
margin_bottom = 200.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="widthContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 555.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/widthContainer"]
margin_top = 25.0
margin_right = 275.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Width: "

[node name="width" type="TextEdit" parent="HBoxContainer/widthContainer"]
margin_left = 279.0
margin_right = 555.0
margin_bottom = 98.0
size_flags_horizontal = 7
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heightContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_top = 102.0
margin_right = 555.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/heightContainer"]
margin_top = 25.0
margin_right = 275.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Height: "

[node name="height" type="TextEdit" parent="HBoxContainer/heightContainer"]
margin_left = 279.0
margin_right = 555.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="resized" from="." to="." method="_on_ViewportSizeControls_resized"]
[connection signal="gui_input" from="HBoxContainer/widthContainer/width" to="." method="_on_width_gui_input"]
[connection signal="gui_input" from="HBoxContainer/heightContainer/height" to="." method="_on_height_gui_input"]
